// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton renders with custom size image 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  background-color: #e5e6eb;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  margin-right: 16px;
}

.emotion-2 {
  list-style: none;
  padding: 0;
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
}

.emotion-3 {
  height: 16px;
  background-color: #e5e6eb;
}

.emotion-3:not(last-child) {
  margin-bottom: 16px;
}

.emotion-5 {
  width: 80%;
  height: 16px;
  background-color: #e5e6eb;
}

.emotion-5:not(last-child) {
  margin-bottom: 16px;
}

<div
  class="emotion-0"
  data-testid="skeleton"
>
  <div
    class="emotion-1"
  />
  <ul
    class="emotion-2"
  >
    <li
      class="emotion-3"
    />
    <li
      class="emotion-3"
    />
    <li
      class="emotion-5"
    />
  </ul>
</div>
`;

exports[`Skeleton renders with image 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  background-color: #e5e6eb;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  margin-right: 16px;
}

.emotion-2 {
  list-style: none;
  padding: 0;
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
}

.emotion-3 {
  height: 16px;
  background-color: #e5e6eb;
}

.emotion-3:not(last-child) {
  margin-bottom: 16px;
}

.emotion-5 {
  width: 80%;
  height: 16px;
  background-color: #e5e6eb;
}

.emotion-5:not(last-child) {
  margin-bottom: 16px;
}

<div
  class="emotion-0"
  data-testid="skeleton"
>
  <div
    class="emotion-1"
  />
  <ul
    class="emotion-2"
  >
    <li
      class="emotion-3"
    />
    <li
      class="emotion-3"
    />
    <li
      class="emotion-5"
    />
  </ul>
</div>
`;

exports[`Skeleton renders with squrare shape image 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  background-color: #e5e6eb;
  width: 48px;
  height: 48px;
  margin-right: 16px;
}

.emotion-2 {
  list-style: none;
  padding: 0;
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
}

.emotion-3 {
  height: 16px;
  background-color: #e5e6eb;
}

.emotion-3:not(last-child) {
  margin-bottom: 16px;
}

.emotion-5 {
  width: 80%;
  height: 16px;
  background-color: #e5e6eb;
}

.emotion-5:not(last-child) {
  margin-bottom: 16px;
}

<div
  class="emotion-0"
  data-testid="skeleton"
>
  <div
    class="emotion-1"
  />
  <ul
    class="emotion-2"
  >
    <li
      class="emotion-3"
    />
    <li
      class="emotion-3"
    />
    <li
      class="emotion-5"
    />
  </ul>
</div>
`;

exports[`Skeleton renders with width array 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  list-style: none;
  padding: 0;
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
}

.emotion-2 {
  width: 100px;
  height: 16px;
  background-color: #e5e6eb;
}

.emotion-2:not(last-child) {
  margin-bottom: 16px;
}

.emotion-3 {
  width: 200px;
  height: 16px;
  background-color: #e5e6eb;
}

.emotion-3:not(last-child) {
  margin-bottom: 16px;
}

.emotion-4 {
  width: 300px;
  height: 16px;
  background-color: #e5e6eb;
}

.emotion-4:not(last-child) {
  margin-bottom: 16px;
}

<div
  class="emotion-0"
  data-testid="skeleton"
>
  <ul
    class="emotion-1"
  >
    <li
      class="emotion-2"
    />
    <li
      class="emotion-3"
    />
    <li
      class="emotion-4"
    />
  </ul>
</div>
`;
